[package]
name = "raster_3d_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
softbuffer = "0.3.1"
winit = "0.28.7"

[lib]
name = "lib_engine"
path = "src/lib_engine.rs"

[[bin]]
name = "runner"
path = "src/bin/runner.rs"

[[bin]]
name = "editor"
path = "src/bin/editor.rs"
